Fix spacing in catalog page

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -63,6 +63,7 @@ $fz-xs: 14px;
 $fz-sm: 16px;
 $fz-md: 18px;
 $fz-m: 20px;
+$fz-ml: 24px;
 $fz-lg: 28px;
 $fz-xl: 36px;
 $fz-2xl: 52px;
