--- a/src/styles/components/_article-footer-card.scss
+++ b/src/styles/components/_article-footer-card.scss
@@ -29,7 +29,7 @@
   &__title {
     font-size: $fz-m;
     line-height: $lh-md;
-    margin-block: 12px;
+    margin-block: $space-md;
   }
 
   &__date {
