--- a/src/styles/layouts/_catalog-aside.scss
+++ b/src/styles/layouts/_catalog-aside.scss
@@ -66,6 +66,7 @@
     @include desktop {
       flex-direction: column;
       width: 100%;
+      padding-inline: $space-0;
     }
   }
   
@@ -107,8 +108,6 @@
   }
 
   &__label {
-    font-size: $fz-xs;
-    line-height: $lh-sm;
     color: $color-text-primary;
     position: relative;
   }
