--- a/src/styles/layouts/_catalog-page.scss
+++ b/src/styles/layouts/_catalog-page.scss
@@ -64,7 +64,6 @@
     flex-direction: row-reverse;
     gap: $gap-lg;
     padding-block: $space-0;
-    margin-bottom: $space-6xl;
   }
 }
 
