--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -18,12 +18,12 @@
   &__upper {
     display: flex;
     flex-direction: column;
-    margin-top: 64px;
+    margin-top: $space-4xl;
 
     @include tablet {
       flex-direction: row;
       justify-content: space-between;
-      margin-top: 120px;
+      margin-top: $space-6xl;
     }
   }
 
